httpd-deploy-and-ingress.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
  labels:
    app: httpd
spec:
  replicas: 1  # Number of Nginx pods
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80

---
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  namespace: default
  labels:
    app: httpd
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: default
  annotations:
    # appgw.ingress.kubernetes.io/use-private-ip: "true"
    # appgw.ingress.kubernetes.io/appgw-ssl-certificate: "<name_of_the_app_gateway_certificate>"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: httpd-svc
            port:
              number: 80
